# pytokei

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
api/config/: index.html
api/language/: index.html
api/language_type/: index.html
api/languages/: index.html
api/sort/: index.html
api/stats/: index.html
bench/: Dockerfile.python  README.md  bench.rs  bench_py.sh  bench_rs.sh  run_dockerfile_py.sh
cli/: index.html
docs/: cli.md  index.md  usage.md
docs/api/: config.md  language.md  language_type.md  languages.md  sort.md  stats.md
pytokei/: __init__.py  _pytokei.pyi  cli.py
requirements/: all.txt  docs.txt  linting.in  linting.txt  test.txt
search/: search_index.json
src/: lib.rs  pyconfig.rs  pylanguage.rs  pylanguage_type.rs  pylanguages.rs  pysort.rs  pystats.rs
tests/: test_pytokei.py
tests/data/: Dockerfile  python2.py  rust.rs
tests/data/configs/: tokei.example.toml
usage/: index.html
