[package]
name = "pytokei"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {version = "0.17.1", features = ["extension-module", "abi3-py37"]}
tokei = "12.1"

[lib]
name = "pytokei"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "pytokei._pytokei"