[build-system]
requires = ['maturin>=0.13,<0.14']
build-backend = 'maturin'

[project]
name = 'pytokei'
requires-python = '>=3.7'
description = 'Python bindings to tokei'
authors = [
    {name ='Agustin Piqueres', email = 'agustin.piqueres@gmail.com'},
]

[project.optional-dependencies]
test = [
    "pytest >= 7.1.3",
    "pytest-cov>=2",
    "black",
    "isort",
    "nox"
]

[tool.maturin]
bindings = 'pyo3'
sdist-include = ['Cargo.lock']
