[build-system]
requires = ['maturin>=0.14,<0.15']
build-backend = 'maturin'

[project]
name = 'pytokei'
requires-python = '>=3.7'
description = 'Python bindings to tokei, the Rust library to count code quickly.'
authors = [
    {name ='Agustin Piqueres', email = 'agustin.piqueres@gmail.com'},
]
classifiers = [
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS',
    'Topic :: Software Development :: Libraries :: Python Modules'
]
description-file = "README.md"
[project.optional-dependencies]
cli = [
    "typer>=0.7.0",
    "rich>=13.3.0"
]

[project.urls]
Homepage = 'https://github.com/plaguss/pytokei'
Documentation = 'https://plaguss.github.io/pytokei/'
Source = 'https://github.com/plaguss/pytokei'

[tool.maturin]
bindings = 'pyo3'
sdist-include = ['Cargo.lock']

[tool.mypy]
strict = true
show_error_codes = true